--- a/frontend/src/components/crm/Product/styles/AddItemModal.css
+++ b/frontend/src/components/crm/Product/styles/AddItemModal.css
@@ -80,6 +80,7 @@
   width: 100%;
   padding: 0.8rem 1rem 0.8rem 2.5rem;
   border-radius: 10px;
+   font-family: 'Outfit', sans-serif;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
@@ -123,6 +124,7 @@
   width: 100%;
   padding: 0.7rem 1rem;
   border-radius: 10px;
+   font-family: 'Outfit', sans-serif;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
@@ -136,6 +138,7 @@
   width: 100%;
   padding: 0.7rem 1rem;
   border-radius: 10px;
+   font-family: 'Outfit', sans-serif;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
